<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_header">Поиск дешевых\nавиабилетов</string>
    <string name="title_offer_feed">Музыкально отлететь</string>
    <string name="departure_hint">Откуда - Москва</string>
    <string name="arrival_hint">Куда - Турция</string>
    <string name="price_prefix">от</string>
    <string name="ruble">₽</string>
    <string name="hours_on_the_road">ч в пути</string>

    <string name="desc_airplane">Airplane</string>
    <string name="desc_bottom_sheet">BottomSheet</string>
    <string name="title_difficult_rout">Сложный\nмаршрут</string>
    <string name="title_anywhere">Куда угодно</string>
    <string name="title_calendar">Выходные</string>
    <string name="title_hot_tickets">Горячие\nбилеты</string>
    <string name="desc_istanbul">Стамбул</string>
    <string name="text_istanbul">Стамбул</string>
    <string name="text_rec_desc">Популярное направление</string>
    <string name="text_sochi">Сочи</string>
    <string name="text_phuket">Пхукет</string>
    <string name="ft_btn_back">обратно</string>
    <string name="desc_back">Обратно</string>
    <string name="btn_filter">фильтры</string>
    <string name="title_offer_ticket">Прямые рельсы</string>
    <string name="desc_right_arrow">Стрелка вправо</string>
    <string name="title_btn_see_all_tickets">Посмотреть все билеты</string>
</resources>